# TerraRepair-Bench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
experiments/configs/: full_experiment.yaml
scripts/: analyze.py  run_experiment.py  sample_terrads.py
src/: __init__.py
src/repair/: __init__.py  repair_agent.py
src/sampling/: __init__.py  module_filter.py  terrads_sampler.py
src/scanning/: __init__.py  checkov_runner.py  scanner_normalizer.py  trivy_runner.py
src/scoring/: __init__.py  delta_scorer.py
src/utils/: __init__.py  bedrock_client.py  response_sanitizer.py
tests/: test_bedrock_access.py  test_delta_scorer.py  test_scanner_normalizer.py
